feat(AIAI-585): introduce internal guardrails